trunk/Archive2/32/573db602294e19/output
+ g++-5.1 -std=c++14 -O0 -Wall -pedantic -Wextra -pthread main.cpp
In file included from /usr/local/include/c++/5.1.0/vector:62:0,
                 from main.cpp:1:
/usr/local/include/c++/5.1.0/bits/stl_construct.h: In instantiation of 'void std::_Construct(_T1*, _Args&& ...) [with _T1 = std::unique_ptr<A>; _Args = {const std::unique_ptr<A, std::default_delete<A> >&}]':
/usr/local/include/c++/5.1.0/bits/stl_uninitialized.h:75:18:   required from 'static _ForwardIterator std::__uninitialized_copy<_TrivialValueTypes>::__uninit_copy(_InputIterator, _InputIterator, _ForwardIterator) [with _InputIterator = __gnu_cxx::__normal_iterator<const std::unique_ptr<A>*, std::vector<std::unique_ptr<A> > >; _ForwardIterator = std::unique_ptr<A>*; bool _TrivialValueTypes = false]'
/usr/local/include/c++/5.1.0/bits/stl_uninitialized.h:126:15:   required from '_ForwardIterator std::uninitialized_copy(_InputIterator, _InputIterator, _ForwardIterator) [with _InputIterator = __gnu_cxx::__normal_iterator<const std::unique_ptr<A>*, std::vector<std::unique_ptr<A> > >; _ForwardIterator = std::unique_ptr<A>*]'
/usr/local/include/c++/5.1.0/bits/stl_uninitialized.h:281:37:   required from '_ForwardIterator std::__uninitialized_copy_a(_InputIterator, _InputIterator, _ForwardIterator, std::allocator<_Tp>&) [with _InputIterator = __gnu_cxx::__normal_iterator<const std::unique_ptr<A>*, std::vector<std::unique_ptr<A> > >; _ForwardIterator = std::unique_ptr<A>*; _Tp = std::unique_ptr<A>]'
/usr/local/include/c++/5.1.0/bits/stl_vector.h:322:31:   required from 'std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = std::unique_ptr<A>; _Alloc = std::allocator<std::unique_ptr<A> >]'
main.cpp:19:7:   [ skipping 2 instantiation contexts, use -ftemplate-backtrace-limit=0 to disable ]
/usr/local/include/c++/5.1.0/bits/stl_uninitialized.h:126:15:   required from '_ForwardIterator std::uninitialized_copy(_InputIterator, _InputIterator, _ForwardIterator) [with _InputIterator = Obj*; _ForwardIterator = Obj*]'
/usr/local/include/c++/5.1.0/bits/stl_uninitialized.h:281:37:   required from '_ForwardIterator std::__uninitialized_copy_a(_InputIterator, _InputIterator, _ForwardIterator, std::allocator<_Tp>&) [with _InputIterator = Obj*; _ForwardIterator = Obj*; _Tp = Obj]'
/usr/local/include/c++/5.1.0/bits/stl_uninitialized.h:303:2:   required from '_ForwardIterator std::__uninitialized_move_if_noexcept_a(_InputIterator, _InputIterator, _ForwardIterator, _Allocator&) [with _InputIterator = Obj*; _ForwardIterator = Obj*; _Allocator = std::allocator<Obj>]'
/usr/local/include/c++/5.1.0/bits/vector.tcc:422:8:   required from 'void std::vector<_Tp, _Alloc>::_M_emplace_back_aux(_Args&& ...) [with _Args = {mpq_class&, std::vector<std::unique_ptr<A, std::default_delete<A> >, std::allocator<std::unique_ptr<A, std::default_delete<A> > > >}; _Tp = Obj; _Alloc = std::allocator<Obj>]'
/usr/local/include/c++/5.1.0/bits/vector.tcc:101:23:   required from 'void std::vector<_Tp, _Alloc>::emplace_back(_Args&& ...) [with _Args = {mpq_class&, std::vector<std::unique_ptr<A, std::default_delete<A> >, std::allocator<std::unique_ptr<A, std::default_delete<A> > > >}; _Tp = Obj; _Alloc = std::allocator<Obj>]'
main.cpp:32:77:   required from here
/usr/local/include/c++/5.1.0/bits/stl_construct.h:75:7: error: use of deleted function 'std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = A; _Dp = std::default_delete<A>]'
     { ::new(static_cast<void*>(__p)) _T1(std::forward<_Args>(__args)...); }
       ^
In file included from /usr/local/include/c++/5.1.0/memory:81:0,
                 from main.cpp:2:
/usr/local/include/c++/5.1.0/bits/unique_ptr.h:356:7: note: declared here
       unique_ptr(const unique_ptr&) = delete;
       ^
